--- a/style.css
+++ b/style.css
@@ -248,3 +248,109 @@ footer .container {
   display: flex;
   gap: 30px;
 }
+
+@media screen and (max-width: 375px) {
+  header {
+    background-image: url('./images/bg-header-mobile.png');
+  }
+
+  header .container {
+    display: flex;
+    align-items: center;
+  }
+
+  header img {
+    width: 140px;
+  }
+
+  .start-page h2 {
+    font-size: 35px;
+  }
+
+  .start-page p {
+    font-size: 17px;
+    width: 350px;
+    margin: 8px;
+    margin-bottom: 25px;
+  }
+
+  .download-btn {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 50px;
+  }
+
+  .btn-download-cyan,
+  .btn-download-lightblue {
+    width: 70%;
+  }
+
+  .keep-track {
+    margin-top: 40px;
+    margin-left: 10px;
+    width: 350px;
+    font-size: 18px;
+  }
+
+  .keep-track h3 {
+    font-size: 30px;
+  }
+
+  .keep-track p {
+    font-size: 18px;
+    width: 350px;
+  }
+
+  .left-section img {
+    width: 330px;
+    margin-left: 50px;
+  }
+
+  .right-section {
+    display: flex;
+    text-align: center;
+  }
+
+  .clipboard {
+    display: flex;
+    flex-direction: column;
+    margin-left: 8px;
+    width: 350px;
+  }
+
+  .clipboard img {
+    width: 33%;
+    margin-right: 750px;
+  }
+
+  .workflows h3 {
+    line-height: 1.3;
+  }
+
+  .workflows p {
+    font-size: 18px;
+    margin-top: 10px;
+    line-height: 1.3;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .logos-works {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 80px;
+  }
+
+  .install-desc .paragraph h3 {
+    font-size: 30px;
+    width: 360px;
+  }
+
+  .install-desc .paragraph p {
+    font-size: 14px;
+  }
+}
